[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_17.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sfx/Pulser_Sound.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_15.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_18.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_9.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_11.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Lander.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sfx/wind_woosh_loop.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Graphics/SL2_placeholder_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_12.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_13.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_10.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_4.png" type="Texture" id=15]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_5.png" type="Texture" id=16]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_6.png" type="Texture" id=17]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_7.png" type="Texture" id=18]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_8.png" type="Texture" id=19]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_16.png" type="Texture" id=20]
[ext_resource path="res://Assets/Graphics/Animations/Thruster_NEW_2/Thruster_NEW_main_14.png" type="Texture" id=21]
[ext_resource path="res://Scripts/SwipeScreenButton.gd" type="Script" id=22]
[ext_resource path="res://Scripts/PlayerCamera.gd" type="Script" id=23]
[ext_resource path="res://Assets/Sfx/collision.ogg" type="AudioStream" id=24]
[ext_resource path="res://Assets/Graphics/Animations/energy_pulse/Sprite-0002.png" type="Texture" id=25]
[ext_resource path="res://Assets/Graphics/Animations/energy_pulse/Sprite-0001.png" type="Texture" id=26]
[ext_resource path="res://Assets/Graphics/Animations/energy_pulse/Sprite-0006.png" type="Texture" id=27]
[ext_resource path="res://Assets/Graphics/Animations/energy_pulse/Sprite-0003.png" type="Texture" id=28]
[ext_resource path="res://Assets/Graphics/Animations/energy_pulse/Sprite-0004.png" type="Texture" id=29]
[ext_resource path="res://Assets/Graphics/Animations/energy_pulse/Sprite-0005.png" type="Texture" id=30]
[ext_resource path="res://Assets/Graphics/Animations/energy_pulse/Sprite-0007.png" type="Texture" id=31]
[ext_resource path="res://Assets/Graphics/Bolt.png" type="Texture" id=32]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.188235, 1, 0, 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ) ],
"loop": true,
"name": "middle_main",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "new_main_thruster",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ) ],
"loop": true,
"name": "top_middle",
"speed": 20.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "top_thrust",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ) ],
"loop": true,
"name": "top_middle",
"speed": 20.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "top_thrust",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ) ],
"loop": true,
"name": "top_middle",
"speed": 20.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 3 ), ExtResource( 20 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "top_thrust",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 31 ) ],
"loop": false,
"name": "energy_pulse",
"speed": 20.0
} ]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.372549, 1, 0.0862745, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "energize"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.372549, 1, 0.0862745, 1 ), Color( 0.941176, 0.968627, 0.933333, 1 ), Color( 0.372549, 1, 0.0862745, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 22 )

[sub_resource type="RectangleShape2D" id=6]

[node name="Player" type="KinematicBody2D"]
position = Vector2( -1048, 262 )
scale = Vector2( 0.25, 0.25 )
z_index = 10
script = ExtResource( 7 )

[node name="EnergySprite" type="Sprite" parent="."]
position = Vector2( -48, -38 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 32 )

[node name="EnergyBar" type="ProgressBar" parent="."]
margin_left = -40.0
margin_top = -44.0
margin_right = 40.0
margin_bottom = -34.0
custom_styles/fg = SubResource( 8 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.372549, 1, 0.0862745, 1 )
texture = ExtResource( 9 )

[node name="MainThruster" type="AnimatedSprite" parent="Sprite"]
visible = false
position = Vector2( 0, 92 )
scale = Vector2( 1.2, 2.5 )
frames = SubResource( 2 )
animation = "middle_main"
frame = 6

[node name="TopThruster" type="AnimatedSprite" parent="Sprite"]
visible = false
position = Vector2( 0, -44 )
rotation = 3.14159
scale = Vector2( 0.4, 0.5 )
frames = SubResource( 3 )
animation = "top_middle"

[node name="LeftThruster" type="AnimatedSprite" parent="Sprite"]
visible = false
position = Vector2( -36, -4 )
rotation = 1.5708
scale = Vector2( 0.4, 0.5 )
z_index = -1
frames = SubResource( 4 )
animation = "top_middle"

[node name="RightThruster" type="AnimatedSprite" parent="Sprite"]
visible = false
position = Vector2( 32, -4 )
rotation = 4.71239
scale = Vector2( 0.4, 0.5 )
z_index = -1
frames = SubResource( 5 )
animation = "top_middle"

[node name="EnergyPulse" type="AnimatedSprite" parent="Sprite"]
visible = false
position = Vector2( 28, 48 )
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
animation = "energy_pulse"
speed_scale = 1.25

[node name="CooldownTimer" type="Timer" parent="Sprite/EnergyPulse"]
one_shot = true

[node name="EnergizeAnimation" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 9 )
anims/energize = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 2 )
shape = SubResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.15
drag_margin_top = 0.15
drag_margin_right = 0.15
drag_margin_bottom = 0.15
script = ExtResource( 23 )

[node name="SwipeScreenButton" type="TouchScreenButton" parent="PlayerCamera"]
position = Vector2( -576, -1008 )
scale = Vector2( 57.3752, 100.368 )
shape = SubResource( 6 )
script = ExtResource( 22 )

[node name="TapTimer" type="Timer" parent="PlayerCamera/SwipeScreenButton"]
wait_time = 0.6
one_shot = true

[node name="TakeDamage" type="ColorRect" parent="PlayerCamera"]
visible = false
margin_left = -972.0
margin_top = -1472.0
margin_right = -932.0
margin_bottom = -1432.0
rect_scale = Vector2( 50.3562, 76.0315 )
color = Color( 0.960784, 0.0156863, 0.235294, 0.188235 )

[node name="MainThruster" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="PulserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0
pitch_scale = 1.5

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Collision" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = 5.0

[connection signal="animation_finished" from="Sprite/EnergyPulse" to="." method="_on_EnergyPulse_animation_finished"]
[connection signal="timeout" from="Sprite/EnergyPulse/CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="double_tap" from="PlayerCamera/SwipeScreenButton" to="." method="_on_SwipeScreenButton_double_tap"]
[connection signal="timeout" from="Timer" to="PlayerCamera" method="_on_Timer_timeout"]
